--- a/aboutme.html
+++ b/aboutme.html
@@ -4,11 +4,19 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="../styles.css" />
-    <link rel="stylesheet" href="project.css" />
+    <link rel="stylesheet" href="webdev-project.css" />
     <title>aboutme</title>
   </head>
   <body class="aboutme-container">
-    <h1 class="aboutme">about Swetha Srihari</h1>
+    <h1 class="intro">
+      Hello!
+      <div class="pop-effect">
+        <span>I am Swetha Srihari(she/her)</span>
+        <span>Welcome to my site!</span>
+        <span>I am a CS graduate student!</span>
+        <span>I am intrested in the field of datascience!</span>
+      </div>
+    </h1>
     <img
       src="Swetha.jpg"
       alt="An image of Swetha Srihari in the Spring of 2022"
@@ -18,15 +26,14 @@
     />
     <main>
       <p class="content">
-        Hi!I am Swetha Srihari(she/her). I am a graduate student at Portland
-        State University.Pursuing a degree in Computer Science. I have a
-        Bachelors degree in Computer Science and a Master's degree in Computer
-        Application. Interpreting data generally excites me. After my
-        graduation, I would like to see myself do something in the field of data
-        (engineering/analysis/building data analysis models..). I would like the
-        data to be ethically obtained / harvested from people. And I would like
-        to contribute to this cause. I currently do not have any work
-        experience. Am hoping to gather some during the course of my degree.
+        I am a graduate student at Portland State University.Pursuing a degree
+        in Computer Science. I have a Bachelors degree in Computer Science and a
+        Master's degree in Computer Application. Interpreting data generally
+        excites me. After my graduation, I would like to see myself do something
+        in the field of Data Science. I would like the data to be ethically
+        obtained / harvested from people. And would like to contribute towards
+        this cause in some way.Currently, I do not have any work experience. Am
+        hoping to gather some during the course of my degree.
       </p>
     </main>
   </body>
