--- a/wedev-project.html
+++ b/wedev-project.html
@@ -5,34 +5,35 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Swetha Srihari</title>
-    <link rel="stylesheet" href="styles/styles.css" />
+    <link rel="stylesheet" href="styles.css" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.7.1/font/bootstrap-icons.css">
+    <link rel="stylesheet" href="webdev-project.css"/>
   </head>
   <body>
     <main>
-      <div class="container">
-        <nav class = "navbar navbar-expand-md navbar-light py-4">
-            <h1 class="brand">
-                <i class="bi bi-card-text"></i>
+      <div class="project-container">
+        <nav class = "navbar navbar-expand-md navbar-light">
+            <h1 class="myname">
+                <i class="bi bi-megaphone-fill"></i>
                 Swetha Srihari
             </h1>
-              <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+              <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#thetarget" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
               </button>
-              <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
+              <div class="collapse navbar-collapse justify-content-end" id="navbar-nav">
                 <ul class="navbar-nav">
                   <li class="nav-item">
-                    <a href="about-me" class="nav-link">About</a>
+                    <a class="nav-link" href="aboutme.html" >About</a>
                   </li>
                   <li class="nav-item">
-                    <a href="work-section" class="nav-link">Work</a>
+                    <a class="nav-link" href="resume.html" >Education</a>
                   </li>
                   <li class="nav-item">
-                    <a href="projects-section" class="nav-link">Projects</a>
+                    <a class="nav-link" href="projects-section" >Projects</a>
                   </li>
                   <li class="nav-item">
-                    <a href="contact-form" class="nav-link">Contact</a>
+                    <a class="nav-link" href="contact-form" >Contact</a>
                   </li>
                 </ul>
               </div>
@@ -40,13 +41,18 @@
         </nav>
         <div class="row py-5">
           <div class="col-12 col-md-6">
-            <h1 class="brand">Hello! I am a graduate student at Portland State University.</h1>
+            <h2 class="myname">Hello! I am a graduate student at Portland State University.</h2>
             <p>Welcome to my site.</p>
-            <a class="btn btn-primary" href="work-section" role="button">
-              resume
+            <a class="btn btn-primary" href="https://www.linkedin.com/public-profile/settings?trk=d_flagship3_profile_self_view_public_profile" role="button">
+              <i class="bi bi-linkedin"></i>
             </a>
             <a class="btn btn-outline-secondary" href="contact-form" role="button">
               contact me
               <i class="bi bi-envelope"></i>
             </a>
           </div>  
+        </div>
+      </div>
+    </main>
+  </body>
+</html>
