--- a/resume.html
+++ b/resume.html
@@ -4,9 +4,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="../styles.css" />
-    <link rel="stylesheet" href="project.css" />
+    <link rel="stylesheet" href="webdev-project.css" />
     <title>resume</title>
   </head>
+  <main class="container">
   <body class="resume-container">
     <h1 class="resume">Resume</h1>
     <div class="content">
@@ -52,5 +53,6 @@
           </div>
        </div>
     </div>
+  </main>
   </body>
 </html>
