--- a/projects.html
+++ b/projects.html
@@ -1,66 +1,57 @@
 <html lang="en">
   <head>
-    <title>Bootstrap Example</title>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link
-      rel="stylesheet"
-      href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css"
-    />
-    <script src="https://cdn.jsdelivr.net/npm/jquery@3.6.0/dist/jquery.slim.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/js/bootstrap.bundle.min.js"></script>
-    <style>
-      /* Make the image fully responsive */
-      .carousel-inner img {
-        width: 100%;
-        height: 100%;
-      }
-    </style>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="../styles.css" />
+    <link rel="stylesheet" href="webdev-project.css" />
+    <title>projects</title>
   </head>
   <body>
-    <div id="demo" class="carousel slide" data-ride="carousel">
-      <!-- Indicators -->
-      <ul class="carousel-indicators">
-        <li data-target="#demo" data-slide-to="0" class="active"></li>
-        <li data-target="#demo" data-slide-to="1"></li>
-        <li data-target="#demo" data-slide-to="2"></li>
-      </ul>
-
-      <!-- The slideshow -->
-      <div class="carousel-inner">
-        <div class="carousel-item active">
-          <a href ="https://github.com/dev-ssr/CS510_WebDev/blob/main/hw1/02-card.html" target="_blank">
-            <img
-            src="https://1.bp.blogspot.com/-wuFxXJPGCpA/XrPHNgBv6VI/AAAAAAAAAVM/o9dL10i868oc8HmMfNaa0Uuym7fGtFSvQCLcBGAsYHQ/s1600/Pure%2BCSS%2BResponsive%2BCards%2BDesign%2Bwith%2BHover%2BEffect.png" 
-            alt="Card"
-            width="500"
-            height="250"
-          />
-          </a>
-        </div>
-        <div class="carousel-item">
-            <a href="https://github.com/dev-ssr/CS510_WebDev/blob/main/hw3/05-bootstrap-grid.html" target="_blank">
-                <img
-            src="https://www.tutlane.com/images/bootstrap/bootstrap_grid_system_sample_diagram.PNG"
-            class="d-block mx-auto w-50"
-            alt="Bootstrap Grid"
-            width="500"
-            height="250"
-          />
-            </a>
-
-          
-        </div>
-
-
-      <!-- Left and right controls -->
-      <a class="carousel-control-prev" href="#demo" data-slide="prev">
-        <span class="carousel-control-prev-icon"></span>
-      </a>
-      <a class="carousel-control-next" href="#demo" data-slide="next">
-        <span class="carousel-control-next-icon"></span>
-      </a>
-    </div>
+    <main class="pcontainer">
+      <div class="project row-fluid py-5">
+        <h2 class="guessno">Guess the number!</h2>
+        <p>
+          One of the simplest two-player games is “Guess the number”. The first
+          player thinks of a secret number in some known range while the second
+          player attempts to guess the number. After each guess, the first
+          player answers either “Higher”, “Lower” or “Correct!” depending on
+          whether the secret number is higher, lower or equal to the guess. In
+          this project, is a simple interactive program in Python where the
+          computer will take the role of the first player while you play as the
+          second player.
+        </p>
+        <a
+          href="https://github.com/dev-ssr/Python-Games/blob/main/guessnumber.py"
+          >Guess The Number</a
+        >
+      </div>
+      <div class="project row-fluid py-5">
+        <h2 class="pong">Ping Pong</h2>
+        <p>
+          In this project, is a version of Pong, one of the first arcade video
+          games (1972). While Pong is not particularly exciting compared to
+          today's video games,it was relatively simple to build.
+        </p>
+        <a href="https://github.com/dev-ssr/Python-Games/blob/main/pong.py"
+          >Ping Pong</a
+        >
+      </div>
+      <div class="project row-fluid py-5">
+        <h2 class="rock">Rock Paper Scissors</h2>
+        <p>
+          Rock-paper-scissors-lizard-Spock (RPSLS) is a variant of
+          Rock-paper-scissors that allows five choices. Each choice wins against
+          two other choices, loses against two other choices and ties against
+          itself. Much of RPSLS's popularity is that it has been featured in 3
+          episodes of the TV series "The Big Bang Theory". The Wikipedia entry
+          for RPSLS gives the complete description of the details of the game.
+        </p>
+        <a
+          href="https://github.com/dev-ssr/Python-Games/blob/main/rockpaperscissors"
+          >Rock Paper Scissors Lizard Spock</a
+        >
+      </div>
+    </main>
   </body>
 </html>
